# aoc-template

./: README.md  pyproject.toml
aoc/: __init__.py  cli.py  config.py  solution_template.py  template_tools.py  tokens.py
