[tool.poetry]
name = "aoc"
version = "1.0.0"
description = "Quickstart example project for AoC"
authors = ["Bjarke Moensted"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^2.0.1"
browser-cookie3 = "^0.19.1"
jinja2 = "^3.1.4"
numpy = "^2.1.3"
termcolor = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc-init = "aoc.cli:initialize"

[tool.poetry.plugins."adventofcode.user"]
me = "aoc:plugin"
